--- a/index.html
+++ b/index.html
@@ -87,6 +87,27 @@
         nav ul li a:hover {
             color: #007bff;
         }
+        .search-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.search-container input[type="text"] {
+    padding: 12px; /* Increase padding for larger input field */
+    width: 400px; /* Adjust width as needed */
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.search-container button {
+    padding: 12px 20px; /* Adjust padding for button */
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
     </style>
 </head>
 
