--- a/index.html
+++ b/index.html
@@ -92,15 +92,20 @@
     margin-top: 20px;
 }
 
+.search-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
 .search-container input[type="text"] {
-    padding: 12px; /* Increase padding for larger input field */
-    width: 400px; /* Adjust width as needed */
+    padding: 8px; /* Keep padding as it is */
+    width: 500px; /* Increase width to enlarge the search bar */
     border-radius: 5px;
     border: 1px solid #ccc;
 }
 
 .search-container button {
-    padding: 12px 20px; /* Adjust padding for button */
+    padding: 8px 15px; /* Keep padding as it is */
     background-color: #007bff;
     color: white;
     border: none;
