--- a/king kong.html
+++ b/king kong.html
@@ -1,4 +1,11 @@
- <header>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Warner Bros Website</title>
+ 
+<header>
         <a href="#top">
             <img alt="Screenshot 2024-04-12 160015.png" height="90" src="Screenshot 2024-04-12 160015.png" width="100"></a>
         <nav>
