--- a/movies.html
+++ b/movies.html
@@ -58,7 +58,7 @@
     <div class="image-grid">
         <div class="image-item">
             <img alt="KingKong" height="234" src="king%20kong.jpeg" width="149">
-            <div class="image-title">King-Kong vs Godzilla</div>
+            <div class="image-title"><a href="king kong.html">King-Kong vs Godzilla</a>
         </div>
         <div class="image-item">
             <img alt="joker" height="234" src="joker.jpeg" width="149">
