--- a/movies.html
+++ b/movies.html
@@ -26,7 +26,12 @@
             color: black;
             text-decoration: none;
         }
-
+.horizontal-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; /* Allow images to wrap to the next line */
+    margin-top: 20px;
         }
 
 .image-item:hover .image-title {
@@ -57,8 +62,8 @@
 
     <div class="image-grid">
         <div class="image-item">
-            <img alt="KingKong" height="234" src="king%20kong.jpeg" width="149">
-            <div class="image-title"><a href="king kong.html">King-Kong vs Godzilla</a>
+            <a href="king kong.html"><img alt="KingKong" height="234" src="king%20kong.jpeg" width="149"></a>
+            <div class="image-title">King-Kong vs Godzilla
         </div>
         <div class="image-item">
             <img alt="joker" height="234" src="joker.jpeg" width="149">
