--- a/movies.html
+++ b/movies.html
@@ -70,19 +70,38 @@
             <a href="king kong.html"><img alt="KingKong" height="234" src="king%20kong.jpeg" width="149"></a>
             <div class="image-title">King-Kong vs Godzilla</div>
         </div>
-        <!-- Add more image items here -->
-    </div>
-
-    <footer>
-        <ul class="social-media-icons">
-            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
-            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
-            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
-            <!-- Add more social media icons as needed -->
-        </ul>
-        <p>&copy; 2024 Your Website. All rights reserved.</p>
-    </footer>
-</body>
-
-</html>
+        <div class="image-item">
+            <img alt="joker" height="234" src="joker.jpeg" width="149">
+            <div class="image-title">The Joker</div>
+        </div>
+        <div class="image-item">
+            <img alt="kung" height="234" src="kung%20fu.jpeg" width="149">
+            <div class="image-title"><a href="https://phuket.nebula.to/2e6d54db2c86abfa34519fb9dad0d8b631dcba33.mp4?md5=kKpHWqdno1myR3gueOLRJA&expires=1712938984">Kung Fu Panda</a></div>
+        </div>
+        <div class="image-item">
+            <img alt="Bee" height="234" src="bee.jpeg" width="143">
+            <div class="image-title"><a href="https://porto2.nebula.to/a2dd1d5c2c0622b8a6a18b1c1cb7f4abb4599877.mp4?md5=pLsYYChKYoDgdMFDKp8gWw&expires=1712938855">BeeKeeper</a></div>
+        </div>
+        <div class="image-item">
+            <img alt="blue" height="234" src="blue.jpeg" width="149">
+            <div class="image-title"><a href="https://oslo2.nebula.to/db2568ea7bae0f6020520aef246e16e8c8173f60.mp4?md5=XnRV9iCXs0TT8YYeWKMR-Q&expires=1712938568">Blue Beetle</a></div>
+        </div>
+        <div class="image-item">
+            <img alt="equal" height="234" src="equal.jpeg" width="149">
+            <div class="image-title"><a href="https://oslo2.nebula.to/d58d18c62c328a7c6314717ce02a194d175ce955.mp4?md5=hJan7-iZNA0vPqH-n-Hu_w&expires=1712938298">Equalizer 3 </a></div>
+        </div>
+        <div class="image-item">
+            <img alt="red-notice-banner.jpg" height="234" src="red-notice-banner.jpg" width="149">
+            <div class="image-title"><a href="https://lund2.nebula.to/ec25b2ce005bd81d832ee72d579c4d44b0a1f3f1.mp4?md5=XJRpssOjfcjbtsAC7pHMdA&expires=1712938019">Red Notice</a></div>
+        </div>
+        <div class="image-item">
+            <img alt="lift.jpeg" height="234" src="lift.jpeg" width="149">
+            <div class="image-title"><a href="https://phuket.nebula.to/c0bdc5e8e600d672d756400bf89cc560e3f6055d.mp4?md5=c2A8reafUfUDG_a8w3SByg&expires=1712937850">Lift</a></div>
+        </div>
+        <div class="image-item">
+            <img alt="expend.jpeg" height="234" src="expend.jpeg" width="149">
+            <div class="image-title"><a href="https://lund2.nebula.to/0488ab6c504af2530c5397b12498a99dc751fb35.mp4?md5=4BM4_QyMUpvCPtRuwZwwbg&expires=1712937518">Expend4bles</a></div>
+        </div>
+        <div class="image-item">
+            <img alt="dune.jpeg" height="234" src="dune.jpeg" width="149">
+            <div class="image-title">The Dune</div
