--- a/movies.html
+++ b/movies.html
@@ -105,3 +105,75 @@
         <div class="image-item">
             <img alt="dune.jpeg" height="234" src="dune.jpeg" width="149">
             <div class="image-title">The Dune</div
+                                                   <div class="image-item">
+            <img alt="Flash.jpg" height="234" src="Flash.jpg" width="149">
+            <div class="image-title"><a href="https://johor.nebula.to/0f4a2d0c975bea09330ac535ff4e0decafa6c219.mp4?md5=PBsPTaLiMymBVUoVa2TB9g&expires=1712940257">The Flash</a></div>
+        </div>
+         <div class="image-item">
+            <img alt="jumanji.jpeg" height="234" src="jumanji.jpeg" width="149">
+            <div class="image-title"><a href="https://motega2.nebula.to/2adc7672f0430bbc4011896efdf718f1808d266e.mp4?md5=p782TxU8Nl5qUNfP_THWxg&expires=1712940724">The Jumanji</a></div>
+        </div>
+         <div class="image-item">
+            <img alt="meg.jpeg" height="234" src="meg.jpeg" width="149">
+            <div class="image-title"><a href="https://nara.nebula.to/360a8fd2c3287ddf01c4dea323345e308b4ea100.mp4?md5=9cOrolPIDWcFKr0fSlxbxw&expires=1712942727">The Meg 2</a></div>
+        </div>
+         <div class="image-item">
+            <img alt="vol 3.jpeg" height="234" src="vol 3.jpeg" width="149">
+            <div class="image-title"><a href="https://ibex.nebula.to/abcd5617d4d42511def7b439e65eab4e11be5d5a.mp4?md5=BACzyX1ulRqviQl7-NC_mw&expires=1712942880">Guardians of the Galaxy Vol. 3</a></div>
+        </div>
+         <div class="image-item">
+            <img alt="acti.jpeg" height="234" src="acti.jpeg" width="149">
+            <div class="image-title">The Mother</div>
+        </div>
+  
+     <div class="image-item">
+            <img alt="deadpool.jpeg" height="234" src="deadpool.jpeg" width="149">
+            <div class="image-title">The Deadpool</div>
+        </div>
+      <div class="image-item">
+            <img alt="dead.jpeg" height="234" src="dead.jpeg" width="149">
+            <div class="image-title">The Deadshot</div>
+        </div>
+    <div class="image-item">
+            <img alt="john.jpeg" height="234" src="john.jpeg" width="149">
+            <div class="image-title">The John Wick Chapter 4</div>
+        </div>
+    <div class="image-item">
+            <img alt="monkey.jpeg" height="234" src="monkey.jpeg" width="149">
+            <div class="image-title">The Monkey Man</div>
+        </div>
+    <div class="image-item">
+            <img alt="nun.jpeg" height="234" src="nun.jpeg" width="149">
+            <div class="image-title">The Nun II</div>
+        </div>
+    <div class="image-item">
+            <img alt="love.jpeg" height="234" src="love.jpeg" width="149">
+            <div class="image-title">Love and Love Not</div>
+        </div>
+    <div class="image-item">
+            <img alt="the boy.jpeg" height="234" src="the boy.jpeg" width="149">
+            <div class="image-title">The Boy Next Door</div>
+        </div>
+    <div class="image-item">
+            <img alt="sisu.jpeg" height="234" src="sisu.jpeg" width="149">
+            <div class="image-title">The Sisu</div>
+        </div>
+    <div class="image-item">
+            <img alt="romance.jpeg" height="234" src="romance.jpeg" width="149">
+            <div class="image-title">No Hard Feelings</div>
+        </div>
+    </div>
+
+    <footer>
+        <ul class="social-media-icons">
+            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
+        </ul>
+        <p>&copy; 2024 Your Website. All rights reserved.</p>
+    </footer>
+</body>
+
+</html>
