--- a/joker.html
+++ b/joker.html
@@ -83,7 +83,7 @@
     <div class="image-grid">
         <div class="image-item">
            
-          <a href="joker.html"><img alt="Joker" src="joker.jpeg"></a>
+         <img alt="Joker" src="joker.jpeg">
             <div class="image-title">The Joker</div>
         </div>
         <div class="about">
