--- a/movies.html
+++ b/movies.html
@@ -71,7 +71,7 @@
             <div class="image-title">King-Kong vs Godzilla</div>
         </div>
         <div class="image-item">
-            <img alt="joker" height="234" src="joker.jpeg" width="149">
+             <a href="joker.html"><img alt="joker" height="234" src="joker.jpeg" width="149"></a>
             <div class="image-title">The Joker</div>
         </div>
         <div class="image-item">
