Update kung fu panda.html

--- a/kung fu panda.html
+++ b/kung fu panda.html
@@ -1,1 +1,96 @@
- <a href="joker.html">
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Warner Bros Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        .image-grid {
+            display: grid;
+            grid-template-columns: auto 1fr;
+            grid-gap: 20px;
+            padding: 20px;
+        }
+
+        .image-item img {
+            width: 100%;
+            height: auto;
+            max-width: 400px;
+            display: block;
+            margin: 0 auto;
+        }
+
+        .image-title {
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+
+        .about {
+            padding: 20px;
+        }
+
+        .about p {
+            margin-bottom: 20px;
+            line-height: 1.5;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <a href="#top">
+            <img alt="Screenshot 2024-04-12 160015.png" height="90" src="Screenshot 2024-04-12 160015.png" width="100"></a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="movies.html">Movies</a></li>
+                <li><a href="TV Shows.html">TV Shows</a></li>
+                <li><a href="games & apps.html">Games & Apps</a></li>
+                <li><a href="collections.html">Collections</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="image-grid">
+        <div class="image-item">
+            <img alt="Kung Fu Panda 4" src="kung fu.jpeg">
+            <div class="image-title">The Kung Fu Panda 4</div>
+        </div>
+        <div class="about">
+            <p>“Kung Fu Panda 4” is set to continue Po’s adventures as he becomes the Spiritual Leader of the Valley of Peace and must find and train a new Dragon Warrior. The movie features a new villain, a powerful sorceress named Chameleon, who seeks Po’s Staff of Wisdom to re-summon past villains Po has defeated. The cast includes Jack Black, Dustin Hoffman, and Viola Davis, with a run time of approximately 2 hours1234. The movie is part of the Kung Fu Panda franchise and follows the events of Kung Fu Panda 3 (2016)5. Would you like to know more about the release date or other specific details?</p>
+            <p>After Po is tapped to become the Spiritual Leader of the Valley of Peace, he needs to find and train a new Dragon Warrior, while a wicked sorceress plans to re-summon all the master villains whom Po has vanquished to the spirit realm.</p>
+        </div>
+    </div>
+</body>
+
+</html>
