--- a/movies.html
+++ b/movies.html
@@ -75,7 +75,7 @@
             <div class="image-title">The Joker</div>
         </div>
         <div class="image-item">
-            <img alt="kung" height="234" src="kung%20fu.jpeg" width="149">
+            <a href="kung fu panda.html"><img alt="kung" height="234" src="kung%20fu.jpeg" width="149"></a>
             <div class="image-title"><a href="https://phuket.nebula.to/2e6d54db2c86abfa34519fb9dad0d8b631dcba33.mp4?md5=kKpHWqdno1myR3gueOLRJA&expires=1712938984">Kung Fu Panda</a></div>
         </div>
         <div class="image-item">
