--- a/movies.html
+++ b/movies.html
@@ -107,7 +107,7 @@
             <div class="image-title">The Dune</div>
             </div>
                 <div class="image-item">                                     
-            <img alt="Flash.jpg" height="234" src="Flash.jpg" width="149">
+            <a href="flash.html"><img alt="Flash.jpg" height="234" src="Flash.jpg" width="149"></a>
            
         </div>
          <div class="image-item">
