--- a/movies.html
+++ b/movies.html
@@ -79,7 +79,7 @@
             <div class="image-title">The Kung Fu Panda 4</div>
         </div>
         <div class="image-item">
-            <a href="beekeeper.html"><img alt="Bee" height="234" src="bee.jpeg" width="143"></a>
+            <a href="bee.html"><img alt="Bee" height="234" src="bee.jpeg" width="143"></a>
           <div class="image-title">The Beekeeper</div>
         </div>
         <div class="image-item">
