Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -54,6 +54,36 @@
                 <p>This is the information for Blur</p>
             </div>
         </a>
+         <a href="#" onclick="toggleGameInfo('game-info-2')">
+            <figure class="game-image">
+                <img alt="Fifa 22" src="fifa22.jpeg" />
+                <figcaption>Fifa 22</figcaption>
+            </figure>
+            <div class="game-info" id="game-info-2">
+                <!-- Fifa 22 Info -->
+                <p>This is the information for Fifa 22</p>
+            </div>
+        </a>
+         <a href="#" onclick="toggleGameInfo('game-info-2')">
+            <figure class="game-image">
+                <img alt="Call Of Duty" src="call of duty.jpeg" />
+                <figcaption>Blur</figcaption>
+            </figure>
+            <div class="game-info" id="game-info-2">
+                <!-- Call Of Duty Info -->
+                <p>This is the information for Call Of Duty</p>
+            </div>
+        </a>
+         <a href="#" onclick="toggleGameInfo('game-info-2')">
+            <figure class="game-image">
+                <img alt="2K" src="w2k.jpeg" />
+                <figcaption>Wrestling 2K</figcaption>
+            </figure>
+            <div class="game-info" id="game-info-2">
+                <!-- 2K Info -->
+                <p>This is the information for 2K</p>
+            </div>
+        </a>
     </div>
 </body>
 
