Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -56,7 +56,7 @@
         </a>
          <a href="#" onclick="toggleGameInfo('game-info-2')">
             <figure class="game-image">
-                <img alt="Fifa 22" src="fifa22.jpeg" />
+                <img alt="Fifa 22" height : 234 src="fifa22.jpeg"width : 217 />
                 <figcaption>Fifa 22</figcaption>
             </figure>
             <div class="game-info" id="game-info-2">
