Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -35,7 +35,7 @@
     <div class="game-list">
         <a href="#" onclick="toggleGameInfo('game-info-1')">
             <figure class="game-image">
-                <img alt="Froza Horizon 5" class="auto-style1" src="froza.jpeg">
+                <img alt="Froza Horizon 5" height="234" class="auto-style1" src="froza.jpeg" width="149"/>
                 <figcaption>Froza Horizon 5</figcaption>
             </figure>
             <div class="game-info" id="game-info-1">
@@ -46,7 +46,7 @@
 
         <a href="#" onclick="toggleGameInfo('game-info-2')">
             <figure class="game-image">
-                <img alt="Blur" src="blur.png" />
+                <img alt="Blur" height="234" src="blur.png" width="149"/>
                 <figcaption>Blur</figcaption>
             </figure>
             <div class="game-info" id="game-info-2">
@@ -56,7 +56,7 @@
         </a>
          <a href="#" onclick="toggleGameInfo('game-info-2')">
             <figure class="game-image">
-                <img alt="Fifa 22" height : 234 src="fifa22.jpeg"width : 217 />
+                <img alt="Fifa 22" height="234" src="fifa22.jpeg"width="149" />
                 <figcaption>Fifa 22</figcaption>
             </figure>
             <div class="game-info" id="game-info-2">
@@ -66,7 +66,7 @@
         </a>
          <a href="#" onclick="toggleGameInfo('game-info-2')">
             <figure class="game-image">
-                <img alt="Call Of Duty" src="call of duty.jpeg" />
+                <img alt="Call Of Duty" height="234"src="call of duty.jpeg" width="149" />
                 <figcaption>Blur</figcaption>
             </figure>
             <div class="game-info" id="game-info-2">
@@ -76,7 +76,7 @@
         </a>
          <a href="#" onclick="toggleGameInfo('game-info-2')">
             <figure class="game-image">
-                <img alt="2K" src="w2k.jpeg" />
+                <img alt="2K" height="234"src="w2k.jpeg" width="149"/>
                 <figcaption>Wrestling 2K</figcaption>
             </figure>
             <div class="game-info" id="game-info-2">
